--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,7 +20,7 @@
 
 OVERVIEW |
 <a href="tech.html">TECHNICAL</a> |
-<a href="index.html">DOWNLOAD</a>
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/c1boot/">SOURCE</a>
 
 </p>
 
@@ -165,8 +165,6 @@ In the current version of the boot rom, the following doesn't work as
 advertised:
 
 <ul>
-  <li> The IDE controller is hardwired to boot from the secondary
-       master device, as device scanning is only halfway done.
   <li> Selecting configurations by holding down 0..9 during boot does
        not work, configuration 0 is always used.
   <li> CD-ROM support has not been implemented yet.
@@ -181,8 +179,9 @@ advertised:
 <ul>
   <li> Per Olofsson (<a href="mailto:MagerValp%40cling.gu.se">MagerValp&#064;cling.gu.se</a>)
        is the main developer and project maintainer.
-  <li> Adrian Gonzalez (<a href="mailto:agonzale%40globalpc.net">agonzale&#064;globalpc.net</a>)
+  <li> Adrian Gonzalez (<a href="mailto:adrianglz%40globalpc.net">adrianglz&#064;globalpc.net</a>)
        is working on the floppy support.
+  <li> Jeri Ellsworth (<a href="mailto:cm_easy%40yahoo.com">cm_easy&#064;yahoo.com</a>) is developing the hardware.
 </ul>
 
 
