--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -20,7 +20,7 @@
 
 <a href="index.html">OVERVIEW</a> |
 TECHNICAL |
-<a href="index.html">DOWNLOAD</a>
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/c1boot/">SOURCE</a>
 
 </p>
 
