--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -20,7 +20,8 @@
 
 <a href="index.html">OVERVIEW</a> |
 TECHNICAL |
-<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/c1boot/">SOURCE</a>
+<a href="http://sourceforge.net/projects/c1boot/">SF.NET PROJECT PAGE</a> |
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/c1boot/">BROWSE CVS</a>
 
 </p>
 
@@ -34,6 +35,14 @@ TECHNICAL |
 
 Please remember that all this is subject to change. More details will
 be added later on.
+
+
+
+<h2>Debug Output</h2>
+
+The boot ROM prints debug output to RS-232, if you have a Silver
+Surfer plugged into clock port 1. Set your terminal program to 38400
+baud, 8N1, and hardware flow control.
 
 
 
