added link to project page, updated known bugs list

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,7 +20,8 @@
 
 OVERVIEW |
 <a href="tech.html">TECHNICAL</a> |
-<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/c1boot/">SOURCE</a>
+<a href="http://sourceforge.net/projects/c1boot/">SF.NET PROJECT PAGE</a> |
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/c1boot/">BROWSE CVS</a>
 
 </p>
 
@@ -165,6 +166,8 @@ In the current version of the boot rom, the following doesn't work as
 advertised:
 
 <ul>
+  <li> The IDE bus scan code is thoroughly hosed. The current source
+       snapshot <b>does not boot</b>.
   <li> Selecting configurations by holding down 0..9 during boot does
        not work, configuration 0 is always used.
   <li> CD-ROM support has not been implemented yet.
