updated known bug list

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -166,8 +166,7 @@ In the current version of the boot rom, the following doesn't work as
 advertised:
 
 <ul>
-  <li> The IDE bus scan code is thoroughly hosed. The current source
-       snapshot <b>does not boot</b>.
+  <li> The IDE bus scan code is not working well.
   <li> Selecting configurations by holding down 0..9 during boot does
        not work, configuration 0 is always used.
   <li> CD-ROM support has not been implemented yet.
