--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -119,7 +119,11 @@ clusterbuf		4000-bfff	; used by vol_*
 <b>ROM AREA</b>
 
 system code		c000-feff	; reserved for system code
-jump table		ff00-fff9	; system jump table
+jump table		ff00-ffdf	; system jump table
+ver_major		ffe0		; major version number
+ver_minor		ffe1		; minor version number
+ver_rev			ffe2		; revision number
+ver_str			ffe3-fff9	; 0 terminated version string
 irq vector		fffa-fffb	; CPU IRQ vector (not used)
 reset vector		fffc-fffd	; CPU reset vector
 nmi vector		fffe-ffff	; CPU NMI vector
