lka changed, carry now set on empty fifo

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -63,7 +63,7 @@ ways:
 
 
 
-<h3>Memory Map</h3>
+<h2>Memory Map</h2>
 
 There are two free memory ranges in the address space, $0080-$00bf,
 and $2000-$3eff. If you call any provided routines from your code,
@@ -172,20 +172,24 @@ gfx_putchar		ff8c		; print character
 
 
 
-<h3>Custom Instructions</h3>
+<h2>Custom Instructions</h2>
 
 Common to all the instructions is that they don't set the processor
 flags. E.g. you can't use
 
-<pre>    lka          ; check keyboard fifo
-    beq empty    ; <b>does NOT work</b>
+<pre>
+    lda #ide_status  ; status register
+    csa              ; set IDE address
+waitbsy:
+    ild              ; read register
+    bmi waitbsy      ; does NOT work
 </pre>
 
 You need to add a cmp #$00, and #$ff, or some other regular 6502
 instruction before you check the registers.
 
 
-<h4>CSA, select address</h4>
+<h3>CSA, select address</h3>
 
 CSA uses the value in the accumulator to the IDE address pins:
 
@@ -194,7 +198,7 @@ CSA uses the value in the accumulator to the IDE address pins:
   bit 4-7  unused, set to 0</pre>
 
 
-<h4>CTL, system control</h4>
+<h3>CTL, system control</h3>
 
 CTL uses the value in the accumulator to control various I/O lines:
 
@@ -204,51 +208,51 @@ CTL uses the value in the accumulator to control various I/O lines:
   bit 3-7  unused, set to 0</pre>
 
 
-<h4>ILD, IDE load from register</h4>
+<h3>ILD, IDE load from register</h3>
 
 Loads A and X from the currently selected IDE register. The LSB ends
 up in A, and if register 0 is read the MSB ends up in X, otherwise X
 is trashed.
 
 
-<h4>IST, IDE store to register</h4>
+<h3>IST, IDE store to register</h3>
 
 Stores A and X to the currently selected IDE register, see ILD.
 
 
-<h4>SAB, system address bank</h4>
-<h4>SAU, system address upper</h4>
-<h4>SAL, system address lower</h4>
+<h3>SAB, system address bank</h3>
+<h3>SAU, system address upper</h3>
+<h3>SAL, system address lower</h3>
 
 SAB/SAU/SAL are used to select an address in the main CPU RAM. SAB sets
 bits 16-23 from A, SAU sets bits 8-15 from A, SAL sets bits 0-7 from A.
 
 
-<h4>MLD, memory load</h4>
+<h3>MLD, memory load</h3>
 
 MLD loads the byte pointed to by SAB/SAU/SAL from main CPU RAM into A.
 
 
-<h4>MST, memory store</h4>
+<h3>MST, memory store</h3>
 
 MST stores the byte in A to the address pointed to by SAB/SAU/SAL.
 
 
-<h4>SAF, store accumulator to FPGA</h4>
+<h3>SAF, store accumulator to FPGA</h3>
 
 SAF sends the current value in A to the config port of the 1K100.
 
 
-<h4>LKA, load keyboard</h4>
+<h3>LKA, load keyboard</h3>
 
-LKA loads the next byte from the PS/2 keyboard FIFO into A. 0 means
-that the FIFO is empty.
+LKA loads the next byte from the PS/2 keyboard FIFO into A. Carry is
+set if the FIFO is empty (and the contents of A invalid).
 
 
-<h4>GAX, set graphics address X</h4>
-<h4>GAY, set graphics address Y</h4>
-<h4>GAB, set graphics address bank</h4>
-<h4>GST, write pixels</h4>
+<h3>GAX, set graphics address X</h3>
+<h3>GAY, set graphics address Y</h3>
+<h3>GAB, set graphics address bank</h3>
+<h3>GST, write pixels</h3>
 
 Set the graphics cursor address. The drive cpu can address a 640x512
 pixel screen, arranged as a monochrome planar bitmap. GAX sets the
