--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -172,6 +172,7 @@ gfx_puts		ff89		; print string
 gfx_putchar		ff8c		; print character
 gfx_quickcls		ff8f		; clear text area
 gfx_drawicon		ff92		; draw 32x32 icon
+gfx_puthex		ff95		; print hex byte
 </pre>
 
 
