--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -107,10 +107,28 @@ flashbuf		2000-3eff	; reserved for flash code or
 
 <b>MEMORY MAPPED I/O AREA</b>
 
-clock port 2		3f00-3f1f	; clock port 2 is mapped here
-clock port 1		3f20-3f3f	; clock port 1 is mapped here
+ROML			3f00-3f0f	; cartridge port chip select
+I/O2			3f10-3f1f	; cartridge port chip select
+clock port 1		3f20-3f2f	; clock port 1 is mapped here
 					; a silver surfer plugged in here is
 					; used by the debug_* routines
+SID 1			3f30-3f3f	; only 16 registers, can't use SID
+ROMH			3f40-3f4f	; cartridge port chip select
+I/O1			3f50-3f5f	; cartridge port chip select
+clock port 2		3f60-3f6f	; clock port 2 is mapped here, and also
+					; the flash programming registers
+clear flash address	3f60		; set the flash address to $00000
+preset flash address 1	3f62		; set the flash address to $00555
+preset flash address 2	3f64		; set the flash address to $002aa
+shift flash address	3f66		; shift the flash address left
+incr. flash address	3f68		; increment flash address by one
+flash data reg 0	3f6c		; data register for $00000 - $1ffff
+flash data reg 1	3f6d		; data register for $20000 - $3ffff
+flash data reg 2	3f6e		; data register for $40000 - $5ffff
+flash data reg 3	3f6f		; data register for $60000 - $7ffff
+SID 2			3f70-3f7f	; only 16 registers, can't use SID
+(reserved)		3f80-3fff
+
 
 <b>HIRAM AREA</b>
 
@@ -174,6 +192,13 @@ gfx_quickcls		ff8f		; clear text area
 gfx_drawicon		ff92		; draw 32x32 icon
 gfx_puthex		ff95		; print hex byte
 </pre>
+
+
+
+<h2>How to program the Flash ROM</h2>
+
+For a detailed article on how to use the flash programming registers,
+see <a href="c1flash.shtml">Flashing the C-One Flash ROM</a>.
 
 
 
