added dsk vectors

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -392,6 +392,9 @@ gfx_putchar		ff8c		; print character
 gfx_quickcls		ff8f		; clear text area
 gfx_drawicon		ff92		; draw 32x32 icon
 gfx_puthex		ff95		; print hex byte
+
+dsk_load		ffa0		; load DSK image
+dsk_save		ffa3		; save DSK image
 </pre>
 
 
