stat now returns entry type

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -430,7 +430,8 @@ vol_fstype		1f0e		; file system type, one of:
 vol_secperclus		1f0f		; # of 512 byte sectors in one cluster
 cluster			1f10		; set before calling vol_read_clust
 					; or vol_next_clust
-(reserved)		1f14-1f3f
+stat_type		1f14		; dir entry type, set by vol_stat
+(reserved)		1f15-1f3f
 lba			1f40		; set before calling dev_read_sector
 devtype			1f44		; current device type
 (reserved)		1f45-1fff
